# nodejs-rs-driver

./: .gitignore  .npmignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTENANCE.md  README.md  eslint.config.mjs  flame.sh  js-doc-config.js  main.d.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.cargo/: config.toml
.github/milestone-sync/: config.yaml
.github/workflows/: benchmarks.yml  check-docs.yml  code-quality.yml  docs-pages.yml  docs-pr.yml  examples.yml  extended-ci.yml  integration-tests.yml  milestone-sync.yml  release.yml  typescript-tests.yml  unit-tests.yml
benchmark/: Cargo.toml  README.md  package-lock.json  package.json  runner.py
benchmark/logic/: batch.js  benchmark.js  concurrent_deser.js  concurrent_insert.js  concurrent_paging.js  concurrent_select.js  concurrent_ser.js  deser.js  insert.js  large_select.js  paging.js  parametrized_select.js  select.js  ser.js  utils.js
benchmark/logic_rust/: batch.rs  common.rs  concurrent_deser.rs  concurrent_insert.rs  concurrent_paging.rs  concurrent_select.rs  concurrent_ser.rs  deser.rs  insert.rs  paging.rs  parametrized_select.rs  ser.rs
benchmark/runner-config/: config.yml  run-js-benchmark.sh  run-js-concurrency-benchmark.sh  run-rust-benchmark.sh  run-rust-concurrency-benchmark.sh
benchmark/runner-config/cassandra-driver/: config.yml
benchmark/runner-config/rust-driver/: config.yml
benchmark/runner-config/scylladb-driver/: config.yml
book/: 404.html  batch.html  index.html  load_balancing.html  migration_guide.html  paging.html  print.html  searcher-c2a407aa.js  searchindex-1ffe27a2.js  searchindex-54525e77.js  searchindex-7800d3a0.js  searchindex-c346bdd5.js  searchindex-d0d1e991.js  shutdown.html  statements.html  toc-338321ef.js  toc-5561e063.js  toc-9e992bdf.js  toc-b4d60cb1.js  toc-fa8eaeb7.js  toc.html  unprepared_statements.html
book/internal/: SUMMARY.html
docs/: AddressResolver.html  ByteOrderedToken.html  Client.html  Encoder.html  ExecutionOptions.html  ExecutionProfile.html  FrameReader.html  HashSet.html  Host.html  HostMap.html  LineString.html  Makefile  Murmur3Token.html  Point.html  Polygon.html  README.md  RandomToken.html  SslOptions.html  Token.html  TokenRange.html  auth_gssapi-client.js.html  auth_index.js.html  auth_plain-text-auth-provider.js.html  auth_provider.js.html  book.toml  cache.js.html  client-options.js.html  client.js.html  concurrent_index.js.html  datastax_index.js.html  encoder.js.html  errors.js.html  execution-options.js.html  execution-profile.js.html  geometry_index.js.html  geometry_line-string.js.html  geometry_point.js.html  geometry_polygon.js.html  global.html  host.js.html  (+150 more)
docs/_extensions/: jsdoc_content.py
docs/_utils/: generate_api_pages.py  multiversion.sh
docs/source/: SUMMARY.md  conf.py  index.rst
docs/src/: SUMMARY.md  load_balancing.md  migration_guide.md  statements.md  type_hints.md  unprepared_statements.md
examples/: README.md  package-lock.json  package.json  util.js
examples/basic/: basic-connect.js  basic-execute-flow.js  basic-execute.js
examples/concurrent-executions/: execute-concurrent-array.js  execute-in-loop.js
lib/: .gitignore  cache.js  client-options.js  client.js  client.ts  encoder.js  errors.js  errors.ts  execution-options.js  execution-profile.js  execution-profile.ts  host.js  new-utils.js  new-utils.ts  promise-utils.js  query-options.js  reader.js  token.js  utils.js
src/: async_bridge.rs  casync.rs  custom-types.d.ts  errors.rs  lib.rs  logging.rs  napi_helpers.rs  options.rs  paging.rs  result.rs  session.rs
test/: test-helper.js
(+215 files in other folders)
