[package]
edition = "2024"
name = "scylladb-javascript-driver"
version = "0.0.2"

[lib]
crate-type = ["cdylib"]

[dependencies]

napi = { version = "3.6.0", default-features = false, features = ["napi4", "napi6", "async"] }
napi-derive = "3.4.0"
scylla = { git = "https://github.com/scylladb/scylla-rust-driver.git", rev = "4f02969823f7b07b0d6b007a11863fe4aac95821", features = ["num-bigint-03", "openssl-010", "unstable-nodejs-rs"] }
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"
uuid = "1"
regex = "1.11.1"
thiserror = "2.0.12"
num-bigint = "0.4.6"
openssl = "0.10.70"

[lints.rust]
unsafe-op-in-unsafe-fn = "warn"

[workspace]
members = ["benchmark"]

[build-dependencies]
napi-build = "2.1.5"

[profile.release]
lto = true
panic = "abort"

[profile.dev]
panic = "abort"

